config update (claude)

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,11 +1,12 @@
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 set -g prefix C-space
-set -ag prefix M-p
+set -g prefix2 M-p
 set -g mouse on
 set -g base-index 1
 set -g default-terminal "tmux-256color"
+set -g override-terminal "ghostty-256color"
 set-option -g status-position top
 set-option -g @catppuccin_window_text "#[bg=default] #{?#{!=:#{window_name},},: #W,} "
 
@@ -23,9 +24,16 @@ set -g @plugin 'omerxx/tmux-sessionx'
 
 set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_window_status_style "rounded"
-set -g @catppucin_status_background "none"
+set -g @catppuccin_status_background "none"
 set -g @catppuccin_date_time_text " %m/%d %H:%M"
 set -g @catppuccin_user "off"
+set -g @catppuccin_status_session "icon"
+set -g @catppuccin_status_session_color "#{?client_prefix,#ff0000,#a6e3a1}"
+
+# Battery module configuration
+set -g @catppuccin_status_battery "icon"
+set -g @catppuccin_status_battery_icon "#{battery_icon}"
+set -g @catppuccin_status_battery_text "#{battery_percentage}"
 
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
