--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,7 +6,6 @@ set -g prefix2 M-p
 set -g mouse on
 set -g base-index 1
 set -g default-terminal "tmux-256color"
-set -g override-terminal "ghostty-256color"
 set-option -g status-position top
 set-option -g @catppuccin_window_text "#[bg=default] #{?#{!=:#{window_name},},: #W,} "
 
@@ -15,40 +14,35 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'omerxx/tmux-sessionx'
 
 set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_window_status_style "rounded"
-set -g @catppuccin_status_background "none"
 set -g @catppuccin_date_time_text " %m/%d %H:%M"
-set -g @catppuccin_user "off"
-set -g @catppuccin_status_session "icon"
-set -g @catppuccin_status_session_color "#{?client_prefix,#ff0000,#a6e3a1}"
-
-# Battery module configuration
-set -g @catppuccin_status_battery "icon"
-set -g @catppuccin_status_battery_icon "#{battery_icon}"
-set -g @catppuccin_status_battery_text "#{battery_percentage}"
-
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
 # Configure the catppuccin plugin
 set -g status-right-length 100
 set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_date_time}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
-set -agF status-right "#{E:@catppuccin_status_session}"
 
 # window style
 set -wg automatic-rename on
 set -g @catppuccin_window_text " #W"
 set -g @catppuccin_window_current_text " #W"
 
-run ~/.tmux/plugins/tpm/tpm
+# Load catppuccin FIRST
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+
+# Configure status modules (after catppuccin is loaded)
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_session}"
+set -agF status-right "#{E:@catppuccin_status_date_time}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+set -g status-left ""
+
+# Load TPM last
+run ~/.config/tmux/plugins/tpm/tpm
