finished tmux-nvim config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -9,10 +9,10 @@ set -g default-terminal "tmux-256color"
 set-option -g status-position top
 set-option -g @catppuccin_window_text "#[bg=default] #{?#{!=:#{window_name},},: #W,} "
 
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+bind-key h split-pane -hb
+bind-key j split-pane -v
+bind-key k split-pane -vb
+bind-key l split-pane -h
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -20,6 +20,11 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_window_status_style "rounded"
@@ -32,7 +37,7 @@ set -g status-left-length 100
 # window style
 set -wg automatic-rename on
 set -g @catppuccin_window_text " #W"
-set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_current_text " Beau: #W"
 
 # Load catppuccin FIRST
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
