--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,10 +14,10 @@ bind-key j split-pane -v
 bind-key k split-pane -vb
 bind-key l split-pane -h
 
-set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -26,6 +26,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+set -g @catppuccin_flavour "mocha-dark"
 set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_date_time_text " %m/%d %H:%M"
@@ -43,11 +44,13 @@ set -g @catppuccin_window_current_text " Beau: #W"
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
 # Configure status modules (after catppuccin is loaded)
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_session}"
+set -g status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_application}"
 set -agF status-right "#{E:@catppuccin_status_date_time}"
+set -agF status-right "#{E:@catppuccin_status_load}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
-set -g status-left ""
+set -g status-left "#{pomodoro_status} "
 
 # Load TPM last
+set -g @plugin 'tmux-plugins/tpm'
 run ~/.config/tmux/plugins/tpm/tpm
